# course-selction

./: .env.example  .gitignore  CHECKLIST.md  CLI_SOCKET_GUIDE.md  CODE_STRUCTURE.md  DATABASE_REFACTORING_GUIDE.md  DEBUG_DB_GUIDE.md  DEBUG_TOOLS_SUMMARY.md  DEVELOPER.md  DUAL_MODE_GUIDE.md  FEATURE_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_START.md  QWEN.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SETUP.md  SUMMARY.md  TESTING.md  UI_IMPROVEMENTS.md  USER_GUIDE.md  VERSION_2.0_RELEASE_NOTES.md  course_selection.db  create_admins.py  data.db  init_db.py  manage-users.py  plan.md  pyproject.toml  requirements.txt  start-dev-cluster.sh  start_backend.sh  stop_backend.sh  test_system.py  课程选择系统文档.md  课程选择系统文档_complete.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
backend/: .env.example  README.md  __init__.py  __main__.py  cli.py  config.py  database.py  default_config.py  initialize.py  node_manager.py  requirements.txt  server.py  settings.py  test_backend.py  utils.py
backend/auth_node/: .env.example  REFACTORING_GUIDE.md  main.py
backend/auth_node/routers/: __init__.py  admin_basic_routes.py  admin_course_routes.py  auth_routes.py  settings_routes.py  user_account_routes.py  user_management_routes.py
backend/common/: __init__.py  auth_helpers.py  cli.py  csv_import.py  database.py  db_edit.py  migrate_auth_data.py  migrate_course_credit.py  models.py  rate_limiter.py  schemas.py  security.py  socket_transport.py  user_generator.py  utils.py
backend/course_data/: main.py
backend/data_node/: .env.example  main.py
backend/login/: main.py
backend/queue/: main.py
backend/queue_node/: .env.example  main.py
backend/queue_service/: main.py
backend/student/: main.py
backend/student_node/: .env.example  main.py
backend/teacher/: main.py
backend/teacher_node/: .env.example  main.py
examples/: users_example.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
management/: api.py  api_clean.py  auth.py  config.py  jwt_utils.py  models.py
management/database/: __init__.py  main.py  test_db.py
management/tests/: test_api_quick.py
tests/: test_basic.py  test_comprehensive.py  test_integration.py
ui-of-course-selection/: README.md  package.json  vite.config.ts
ui-of-course-selection/src/: main.ts
(+68 files in other folders)
