[project]
name = "course-selection-backend"
version = "1.0.0"
description = "Backend services for course selection system"
authors = [
    {name = "Course Selection Team", email = "team@example.com"}
]
readme = "backend/README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1,<0.116.0",
    "uvicorn>=0.24.0,<0.33.0",
    "sqlalchemy>=2.0.23,<2.1.0",
    "asyncpg>=0.29.0,<0.31.0",
    "aiosqlite>=0.19.0,<0.21.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.6,<0.0.21",
    "redis>=5.0.1,<6.0.0",
    "celery>=5.3.4,<6.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "cryptography>=41.0.7,<44.0.0",
    "websockets>=12.0,<15.0",
    "httpx>=0.28.0,<0.29.0",
    "pyotp>=2.9.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["backend*"]